# SISGAR

./: .coverage  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
src/sisgar/: __init__.py
src/sisgar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sisgar/app/: dashboard.py
src/sisgar/app/pages/: 01_Inicio_Upload.py  02_Deteccao_Cota.py  03_Area_Cota_Volume.py  04_Curva_Cota_Volume.py  05_Integracao_Area_Volume.py  06_Evaporacao.py  07_Consumo.py  08_Simulacao_Deplecao.py
src/sisgar/hydro/: consumption.py  depletion.py  evaporation.py
src/sisgar/io/: curves.py  dem.py  sentinel.py
src/sisgar/processing/: area_cota_volume.py  indices.py  interpolation.py  watermask.py
src/sisgar/services/: __init__.py  estimar_area_volume.py  simular_deplecao.py
src/sisgar/utils/: config.py  geoutils.py  units.py
tests/: test_area_volume.py  test_hydro.py  test_indices.py
