[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sisgar"
version = "0.1.0"
description = "SISGAR — Sistema de Gestão de Água em Reservatórios (quantitativo: nível, área e volume)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Equipe SISGAR" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.5",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "streamlit>=1.35",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5", "pre-commit>=3.6"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --cov=sisgar --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
ignore = []
